<resources>
    <string name="app_name">Weather App</string>
    <string name="logo">Weather in your city</string>
    <string name="hint_user_field">Type your city</string>
    <string name="main_btn">Check the weather</string>
    <string name="fullName">Full name:</string>
    <string name="email">Email:</string>
    <string name="cityProfile">City:</string>
    <string name="skip">Skip</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="companyName">Carrot Weather</string>
    <string name="city">City</string>
    <string name="full_name">Full Name</string>
    <string name="banner_description">Weather apps don’t threaten your life</string>
    <string name="register_user">Register User</string>
    <string name="reset_password">Reset Password</string>
    <string name="no_user_input">Input text</string>
</resources>